# SmartFileOrganizer

./: .gitignore  CMakeLists.txt  DockerFile  Dockerfile  Makefile
archived/: backup.c
include/: backup.h  cli.h  errors.h  file_type_detector.h  log.h  organize.h  utils.h
include/archive_files/: get_archive_file_info.h
include/image_files/: get_image_files.h
include/modules/backup/: backup.h  copy.h  directories.h
include/modules/file_status/: file_status.h
include/modules/organize/: organize.h
include/modules/organize/sorters/: default.h
include/modules/organize/sorters/images/: sorter.h
include/modules/organize/sorters/others/: sorter.h
include/modules/organize/sorters/videos/: sorter.h
src/: backup.c  cli.c  file_type_detector.c  log.c  main.c  organize.c  utils.c
src/cpp/: input.cpp  utils.cpp
src/file_type_detection/: file_type_detector.c
src/file_type_detection/archive_files/: get_archive_file_info.c
src/file_type_detection/image_files/: get_image_files.c
src/file_type_detection/sound_files/: get_sound_file_info.c
src/modules/backup/: backup.c  copy.c  directories.c
src/modules/file_status/: file_status.c
src/modules/organize/: organize.c
src/modules/organize/sorters/: default.c
src/modules/organize/sorters/images/: sorter.c
src/modules/organize/sorters/others/: sorter.c
src/modules/organize/sorters/videos/: sorter.c
src/modules/utilities/: copy.c
tests/: CMakeLists.txt  tests_get_sound_file_info.c
tests/src/: main.cpp
